--- a/css/facebook.css
+++ b/css/facebook.css
@@ -39,3 +39,18 @@ body  {
   border-bottom: 1px solid lightgrey;
   margin-bottom: 5px;
 }
+.green  {
+  color: green;
+}
+.chat-popup {
+  width: 300px;
+  position: fixed;
+  bottom: 0px;
+  right: 20px;
+  /* Applies the given border style to all sides. */
+  border: 1px solid #000;
+  /* Removes the border on the bottom. */
+  border-bottom: none;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+}
