--- a/css/facebook.css
+++ b/css/facebook.css
@@ -54,3 +54,31 @@ body  {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
+.fb-status-update-entry textarea {
+  resize: none;
+  /* Needs to be !important, since Bootstrap sets this elsewhere. */
+  box-shadow: none !important;
+  border: none;
+}
+.fb-status-update-entry .media {
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+  /* Adds whitespace between bottom border and buttons */
+  margin-bottom: 10px;
+  /* Adds whitespace between top of media object and top border. */
+  padding-top: 5px;
+}
+.fb-status-update hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  /* The color of `hr` is set by its top border color.
+     Yeah, it's weird. */
+  border-top: 1px solid lightgray;
+}
+.fb-status-update .list-inline {
+  margin-bottom: 0px;
+}
+
+.fb-status-update .panel-body {
+  padding-bottom: 5px;
+}
